--- a/accounts/templates/registration/logged_out.html
+++ b/accounts/templates/registration/logged_out.html
@@ -30,9 +30,10 @@
                 </p>
             </div>
             <div>
-                <form method="post" enctype="multipart/form-data" class="tooltip-end-bottom" novalidate>
+                <form method="post" action="{{next}}" enctype="multipart/form-data" class="tooltip-end-bottom" novalidate>
                     {% csrf_token %}
                     {% bootstrap_button type='submit' class="btn btn-lg btn-primary" content="Logout" %}
+                    
                 </form>				
             </div>
             </div>
