Add Apps List View

--- a/accounts/templates/registration/logged_out.html
+++ b/accounts/templates/registration/logged_out.html
@@ -25,7 +25,7 @@
                 <p class="h6">are you sure ?</p>
                 <p class="h6">
                 If you are not, please go
-                <a href="{% url 'login' %}">Back</a>
+                <a href="{% url 'home' %}">Back</a>
                 .
                 </p>
             </div>
