--- a/accounts/templates/registration/account.html
+++ b/accounts/templates/registration/account.html
@@ -6,10 +6,14 @@
 {% endblock title %}
 
 {% block body %}
+        <br>
 <div class="container">
     <div class="row">
-    <h2>Update Profile</h2>
-</div>
+        <h2>Update Profile</h2>
+        <div class="btn_block ml-auto">
+            <a class="btn btn-lg" href="{% url 'logout' %}">Logout</a>
+        </div>
+    </div>
 </div>
 
 <div class="container">
