--- a/templates/base.html
+++ b/templates/base.html
@@ -53,10 +53,10 @@
               <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Apps</a>
+              <a class="nav-link" href="{% url 'apps' %}">Apps</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Tests</a>
+              <a class="nav-link" href="{% url 'tests' %}">Tests</a>
             </li>
 
             <li class="nav-item">
