--- a/accounts/templates/registration/password_change_done.html
+++ b/accounts/templates/registration/password_change_done.html
@@ -1,8 +1,11 @@
 {% extends 'auth_base.html' %}
-{% load django_bootstrap5 %}
 {% load static %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% load i18n %}
 {% block title %}
-  Password Change Done
+{% trans 'Password Change Done' %}
 {% endblock %}
 
 {% block right_section %}
@@ -16,12 +19,12 @@
           </div>
         </div>
         <div class="mb-5">
-          <h2 class="cta-1 mb-0 text-primary">Password Change done</h2>
+          <h2 class="cta-1 mb-0 text-primary">{% trans 'Password Change done' %}</h2>
         </div>
         <div class="mb-5">
-          <p class="h6">Your password has been changed successfully</p>
+          <p class="h6">{% trans 'Your password has been changed successfully' %}</p>
           <p class="h6">
-            <a href="{% url 'account' %}">Back</a>
+            <a href="{% url 'account' %}">{% trans 'Back' %}</a>
             .
           </p>
         </div>
