--- a/accounts/templates/registration/password_change_form.html
+++ b/accounts/templates/registration/password_change_form.html
@@ -1,8 +1,11 @@
 {% extends 'auth_base.html' %}
-{% load django_bootstrap5 %}    
 {% load static %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% load i18n %}
 {% block title %}
-    Password Change
+    {% trans 'Password Change' %}
 {% endblock title %}
     
 {% block right_section %}
@@ -18,8 +21,8 @@
                       </div>    
                 </div>
             <div class="mb-5">
-                <h2 class="cta-1 mb-0 text-primary">Change Password,</h2>
-                <h2 class="cta-1 text-primary">let's get started!</h2>
+                <h2 class="cta-1 mb-0 text-primary">{% trans 'Change Password' %},</h2>
+                <h2 class="cta-1 text-primary">{% trans "let's get started!" %}</h2>
             </div>
             <div>
                 <form method="post" enctype="multipart/form-data" class="tooltip-end-bottom" novalidate>
@@ -27,10 +30,11 @@
                     {% bootstrap_form form %}
                     <div class="mb-5">
                         <p class="h6">
-                        <a href="{% url 'password_reset' %}">Forget Password?</a>
+                        <a href="{% url 'password_reset' %}">{% trans 'Forget Password' %}?</a>
                         </p>
                     </div>
-                    {% bootstrap_button type='submit' class="btn btn-lg btn-primary" content="Change Password" %}
+                    {% trans 'Change Password' as trans_text %}
+                    {% bootstrap_button type='submit' class="btn btn-lg btn-primary" content=trans_text %}
                 </form>				
             </div>
             </div>
