--- a/accounts/templates/registration/password_reset_done.html
+++ b/accounts/templates/registration/password_reset_done.html
@@ -1,8 +1,11 @@
 {% extends 'auth_base.html' %}
-{% load django_bootstrap5 %}    
 {% load static %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% load i18n %}
 {% block title %}
-Password Reset Done
+{% trans 'Password Reset Done' %}
 {% endblock title %}
     
 {% block right_section %}
@@ -18,12 +21,12 @@ Password Reset Done
                       </div>    
                 </div>
             <div class="mb-5">
-                <h2 class="cta-1 mb-0 text-primary">Password Reset Email Sent</h2>
+                <h2 class="cta-1 mb-0 text-primary">{% trans 'Password Reset Email Sent' %}</h2>
             </div>
             <div class="mb-5">
-                <p class="h6">Please check your inbox</p>
+                <p class="h6">{% trans 'Please check your inbox' %}</p>
                 <p class="h6">
-                    <a href="{% url 'account' %}">Back</a>
+                    <a href="{% url 'account' %}">{% trans 'Back' %}</a>
                     .
                   </p>
             </div>
