--- a/accounts/templates/registration/password_reset_form.html
+++ b/accounts/templates/registration/password_reset_form.html
@@ -1,8 +1,11 @@
 {% extends 'auth_base.html' %}
-{% load django_bootstrap5 %}    
 {% load static %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% load i18n %}
 {% block title %}
-Password Reset
+{% trans 'Password Reset' %}
 {% endblock title %}
     
 {% block right_section %}
@@ -18,13 +21,13 @@ Password Reset
                       </div>    
                 </div>
             <div class="mb-5">
-                <h2 class="cta-1 mb-0 text-primary">Reset My Password</h2>
-                <h2 class="cta-1 text-primary">let's get started!</h2>
+                <h2 class="cta-1 mb-0 text-primary">{% trans 'Reset My Password' %}</h2>
+                <h2 class="cta-1 text-primary">{% trans "let's get started" %}!</h2>
             </div>
             <div class="mb-5">
                 <p class="h6">
-                If you are not a member, please
-                <a href="{% url 'register' %}">register</a>
+               {% trans ' If you are not a member, please' %}
+                <a href="{% url 'register' %}">{% trans 'register' %}</a>
                 .
                 </p>
             </div>
@@ -32,7 +35,8 @@ Password Reset
                 <form method="post" enctype="multipart/form-data" class="tooltip-end-bottom" novalidate>
                     {% csrf_token %}
                     {% bootstrap_form form %}
-                    {% bootstrap_button type='submit' class="btn btn-lg btn-primary" content="Reset " %}
+                    {% trans 'Reset' as update_text %}
+                    {% bootstrap_button type='submit' class="btn btn-lg btn-primary" content=update_text %}
                 </form>				
             </div>
             </div>
