--- a/accounts/templates/registration/account.html
+++ b/accounts/templates/registration/account.html
@@ -1,17 +1,23 @@
 {% extends 'base.html' %}  
-{% load django_bootstrap5 %}    
 {% load static %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% load i18n %}
+
 {% block title %}
-    My Profile
+    {% trans 'My Profile' %}
 {% endblock title %}
 
 {% block body %}
         <br>
 <div class="container">
     <div class="row">
-        <h2>Update Profile</h2>
-        <div class="btn_block ml-auto">
-            <a class="btn btn-lg" href="{% url 'logout' %}">Logout</a>
+        <div class="col-lg-10 col-md-6">
+            <h2>{% trans 'Update Profile' %}</h2>
+        </div>  
+        <div class="col-lg-2 col-md-6 btn_block ml-about">
+            <a class="btn  puprple_btn_warn" href="{% url 'logout' %}"> {% trans 'Logout' %}</a>
         </div>
     </div>
 </div>
@@ -20,10 +26,11 @@
     <form method="post" enctype="multipart/form-data" novalidate>
         {% csrf_token %}
         {% bootstrap_form form %}
-        <a class='' href="{% url 'password_change' %}">Change password ?</a>
+        <a  href="{% url 'password_change' %}">{% trans 'Change password' %} ?</a>
         <br>
         <br>
-        {% bootstrap_button type='submit' class="btn btn-lg btn-primary" content="Update" %}
+        {% trans 'Save' as update_text %}
+        {% bootstrap_button name="update" type='submit' class="btn btn-lg btn-primary" content=update_text %}
     </form>				
 </div>
 {% endblock body %}
