--- a/accounts/templates/registration/password_reset_complete.html
+++ b/accounts/templates/registration/password_reset_complete.html
@@ -1,8 +1,11 @@
 {% extends 'auth_base.html' %}
-{% load django_bootstrap5 %}    
 {% load static %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% load i18n %}
 {% block title %}
-Password Change Complete
+{% trans 'Password Change Complete' %}
 {% endblock title %}
     
 {% block right_section %}
@@ -18,12 +21,12 @@ Password Change Complete
                       </div>    
                 </div>
                 <div class="mb-5">
-                    <h2 class="cta-1 mb-0 text-primary">Password Reset Completed</h2>
+                    <h2 class="cta-1 mb-0 text-primary">{% trans 'Password Reset Completed' %}</h2>
                   </div>
                   <div class="mb-5">
-                    <p class="h6">Your password has been Reseted successfully</p>
+                    <p class="h6">{% trans 'Your password has been Reseted successfully' %}</p>
                     <p class="h6">
-                      <a href="{% url 'account' %}">Back</a>
+                      <a href="{% url 'account' %}">{% trans 'Back' %}</a>
                       .
                     </p>
                   </div>			
