--- a/accounts/templates/registration/password_reset_confirm.html
+++ b/accounts/templates/registration/password_reset_confirm.html
@@ -1,8 +1,11 @@
 {% extends 'auth_base.html' %}
-{% load django_bootstrap5 %}    
 {% load static %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+{% load i18n %}
 {% block title %}
-Password Reset Confirm
+{% trans 'Password Reset Confirm' %}
 {% endblock title %}
     
 {% block right_section %}
@@ -18,14 +21,15 @@ Password Reset Confirm
                       </div>    
                 </div>
             <div class="mb-5">
-                <h2 class="cta-1 mb-0 text-primary">Password Reset,</h2>
-                <h2 class="cta-1 text-primary">let's get started!</h2>
+                <h2 class="cta-1 mb-0 text-primary">{% trans 'Password Reset' %},</h2>
+                <h2 class="cta-1 text-primary">{% trans "let's get started" %}!</h2>
             </div>
             <div>
                 <form method="post" enctype="multipart/form-data" class="tooltip-end-bottom" novalidate>
                     {% csrf_token %}
                     {% bootstrap_form form %}
-                    {% bootstrap_button type='submit' class="btn btn-lg btn-primary" content="Reset" %}
+                    {% trans 'Reset' as trans_text %}
+                    {% bootstrap_button type='submit' class="btn btn-lg btn-primary" content=trans_text %}
                 </form>				
             </div>
             </div>
