--- a/apps/templates/apps/home.html
+++ b/apps/templates/apps/home.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load django_bootstrap5 %}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 {% load i18n %}
 {% block title %}
     {% trans 'Home' %}
 {% endblock title %}
-    
-
 
 {% block body %}
   <!-- Banner-Section-Start -->
@@ -24,8 +25,11 @@
               </span>
             </div>
             <!-- h1 -->
-            <h1>{% trans 'Lead generation' %} <span>mobile
-                app Automated Testing</span></h1>
+            <h1>{% trans 'Lead generation' %}
+              {% blocktrans %}
+              <span>mobile app testing platform </span>
+              {% endblocktrans %}
+            </h1>
             <!-- p -->
             <p>
               {% trans 'Software testing is critical in ensuring any application’s success in the digital world.' %}
@@ -87,9 +91,6 @@
           <span class="downsign">
             <i class="icofont-long-arrow-down"></i>
           </span>
-          <div class="spin-text">
-            <img src="{% static 'images/12mtext.png' %}" alt="image">
-          </div>
         </div>
         <span class="star"><img src="{% static 'images/smallStar.png' %}" alt="image"></span>
       </div>
@@ -108,61 +109,33 @@
     <section class="about_section row_am">
       <div class="container">
         <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
-          <span class="title_badge mb-1">About us</span>
-          <h2>Application with the best <img src="images/mobileicon.png" alt="image"> user <br>
-            interface convert <span><img src="images/usericon.png" alt="image"> visitor</span> into <span><img
-                src="images/magnet.png" alt="image"> leads</span></h2>
+          <span class="title_badge mb-1">{% trans 'About us' %}</span>
+          <h2>{% trans 'Application with the best ' %}<img src="{% static 'images/mobileicon.png' %}" alt="image">{% trans ' user' %} <br>
+           {% trans ' interface convert' %} <span><img src="{% static 'images/usericon.png' %}" alt="image"> {% trans 'visitor' %}</span> {% trans 'into' %} <span><img
+                src="{% static 'images/magnet.png' %}" alt="image"> {% trans 'leads' %}</span></h2>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-md-6">
-            <ul class="app_statstic" id="counter" data-aos="fade-in" data-aos-duration="1500">
-              <li data-aos="fade-up" data-aos-duration="1500">
-                <div class="text">
-                  <p><span class="counter-value" data-count="17">0</span><span>M+</span></p>
-                  <p>Download</p>
-                </div>
-              </li>
-              <li data-aos="fade-up" data-aos-duration="1500">
-                <div class="text">
-                  <p><span class="counter-value" data-count="2300">1500</span><span>+</span></p>
-                  <p>Reviews</p>
-                </div>
-              </li>
-              <li data-aos="fade-up" data-aos-duration="1500">
-                <div class="text">
-                  <p><span class="counter-value" data-count="150">0</span><span>+</span></p>
-                  <p>Countries</p>
-                </div>
-              </li>
-              <li data-aos="fade-up" data-aos-duration="1500">
-                <div class="text">
-                  <p><span class="counter-value" data-count="08">0 </span><span>M+</span></p>
-                  <p>Followers</p>
-                </div>
-              </li>
-            </ul>
-          </div>
-          <div class="col-lg-4 col-md-6">
+
+          <div class="col-lg-6 col-md-6">
             <div class="abtImg text-center" data-aos="fade-up" data-aos-duration="1500">
-              <img src="images/appscreen.png" alt="image">
+              <img src="{% static 'img\background\testing.webp' %}" alt="image">
             </div>
           </div>
-          <div class="col-lg-4">
-            <p data-aos="fade-up" data-aos-duration="1500">Lorem Ipsum is simply dummy text of the printing and
-              typesetting industry lorem Ipsum has been the
-              industrys standard dummy text ever since the when an unknown
-              printer took a galley of type and scrambled
-              it to make a type specimen book.</p>
+          <div class="col-lg-6">
+            <p data-aos="fade-up" data-aos-duration="1500">
+              {% trans 'Perform manual and automated app testing with Appix in various screen and screenless devices across mobile Emulators to collect over 100+ performance experience KPIs.' %}
+            </p>
             <div class="video_block" data-aos="fade-up" data-aos-duration="1500">
-              <img class="thumbnil" src="images/applicationvideothumb.png" alt="image">
+              <img class="thumbnil" src="{% static 'images/applicationvideothumb.png' %}" alt="image">
               <div class="playBtn">
                 <a href="#" class="popup-youtube play-button play_icon"
-                  data-url="https://www.youtube.com/embed/tgbNymZ7vqY?autoplay=1&mute=1" data-toggle="modal" data-target="#myModal" title="XJj2PbenIsU"><img src="images/play_white.svg" alt="img"></a>
-                <img class="spin_text" src="images/playvideotext.png" alt="image">
+                  data-url="demo"
+                  data-toggle="modal" data-target="#myModal" title="XJj2PbenIsU">
+                  <img src="{% static 'images/play_white.svg' %}" alt="img"></a>
               </div>
             </div>
             <div class="btn_block" data-aos="fade-up" data-aos-duration="1500">
-              <a href="#" class="btn puprple_btn ml-0">START FREE TRIAL</a>
+              <a href="{% url 'apps' %}" class="btn puprple_btn ml-0">{% trans 'START FOR FREE' %}</a>
               <div class="btn_bottom"></div>
             </div>
           </div>
@@ -174,25 +147,22 @@
     <!-- How It Work Section Start -->
     <section class="how_it_section white_text">
       <div class="how_it_inner" data-aos="fade-in" data-aos-duration="1500">
-        <div class="dotes_blue"><img src="images/blue_dotes.png" alt="image"></div>
+        <div class="dotes_blue"><img src="{% static 'images/blue_dotes.png' %}" alt="image"></div>
         <div class="container">
           <div class="section_title" data-aos="fade-up" data-aos-duration="1500">
-            <span class="title_badge">Quick & easy</span>
-            <h2>How it works in 3 steps</h2>
+            <span class="title_badge">{% trans "Quick & easy" %}</span>
+            <h2>{% trans "How it works in 3 steps" %}</h2>
           </div>
           <div class="row">
             <div class="col-md-4">
                 <div class="steps_block step_border" data-aos="fade-up" data-aos-duration="1500">
                   <div class="steps">
                     <div class="icon">
-                      <img src="images/howstep2.png" alt="image">
+                      <img src="{% static 'images/howstep2.png' %}" alt="image">
                     </div>
                     <div class="text">
-                      <h3>Create account</h3>
-                      <span class="tag_text">Free for 14 days</span>
-                      <p>Our app is FREE for 14 days, Sign up free <br> for
-                        trial
-                        period</p>
+                      <h3>{% trans "Create account" %}</h3>
+                      <span class="tag_text">{% trans "Sign up free" %}</span>
                     </div>
                   </div>
                   <span class="step">01</span>
@@ -202,17 +172,12 @@
               <div class="steps_block step_border" data-aos="fade-up" data-aos-duration="1500">
                 <div class="steps">
                   <div class="icon">
-                    <img src="images/howstep1.png" alt="image">
+                    <img src="{% static 'images/howstep1.png' %}" alt="image">
                   </div>
                   <div class="text">
-                    <h3>Download app</h3>
-                    <ul class="social">
-                      <li><a href="#"><i class="icofont-brand-android-robot"></i></a></li>
-                      <li><a href="#"><i class="icofont-brand-apple"></i></a></li>
-                      <li><a href="#"><i class="icofont-brand-windows"></i></a></li>
-                    </ul>
-                    <p>Download App. It will work for <br> Android, Mac &
-                      Windows</p>
+                    <h3>{% trans "Upload app" %}</h3>
+
+                    <p>{% trans "Upload App. It will work for" %} <br>{% trans " Android & iOS" %} </p>
                   </div>
                 </div>
                 <span class="step">02</span>
@@ -222,12 +187,12 @@
               <div class="steps_block" data-aos="fade-up" data-aos-duration="1500">
                 <div class="steps">
                   <div class="icon">
-                    <img src="images/howstep3.png" alt="image">
+                    <img src="{% static 'images/howstep3.png' %}" alt="image">
                   </div>
                   <div class="text">
-                    <h3>Enjoy the app</h3>
-                    <span class="tag_text">Read FAQs for any query</span>
-                    <p>Enjoy our app & share <br> most amazing app experience</p>
+                    <h3>{% trans "Enjoy the test" %}</h3>
+                    
+                    <p>{% trans "Enjoy testing your apps" %} <br> {% trans "most amazing test experience" %}</p>
                   </div>
                 </div>
                 <span class="step">03</span>
@@ -236,7 +201,7 @@
           </div>
           <div class="text-center">
             <div class="btn_block">
-              <a href="{% url 'login' %}" class="btn puprple_btn ml-0">{% trans 'Get started now' %}</a>
+              <a href="{% url 'apps' %}" class="btn puprple_btn ml-0">{% trans 'Get started now' %}</a>
               <div class="btn_bottom"></div>
             </div>
           </div>
@@ -247,40 +212,6 @@
   </div>
   <!-- Wraper End -->
 
-  <script>
-    $("#typed").typed({
-      strings: ["Type Writing Text", "Auto Type Text", "Add any text you like here."],
-      typeSpeed: 100,
-      startDelay: 0,
-      backSpeed: 60,
-      backDelay: 2000,
-      loop: true,
-      cursorChar: "|",
-      contentType: 'html'
-    });
 
-    // Fixed Discount Dish JS
-    $(document).ready(function () {
-      let cardBlock = document.querySelectorAll('.task_block');
-      let topStyle = 120;
-
-      cardBlock.forEach((card) => {
-        card.style.top = `${topStyle}px`;
-        topStyle += 30;
-      })
-
-    }
-    );
-
-    // Scroll Down Window 
-    $(document).ready(function () {
-      // Attach a click event handler to the button
-      $('#scrollButton').click(function () {
-        // Scroll down smoothly 200 pixels from the current position
-        $('html, body').animate({ scrollTop: $(window).scrollTop() + 600 }, 800); // Adjust the speed (800ms) as needed
-      });
-    });
-
-  </script>
 {% endblock body %}
     
